--- a/3조 요금제.css
+++ b/3조 요금제.css
@@ -70,13 +70,30 @@ main button:hover{
     cursor:pointer
 }
 /* 요금제 섹션 */
-section{
-    width: 1000px;
-    margin: 0 auto;
-}
+
 section h1{
     font-size: 2.5vw;
     text-align: center;
+}
+.rate{
+    display: flex;
+    justify-content: center;
+}
+.plan1 {
+    width: 500px; 
+    height: 400px;
+
+    box-shadow: 0 0 5px gray;
+    
+}
+.plan2 {
+    width: 500px; 
+    height: 400px;
+    box-shadow: 0 0 5px gray;
+    position: relative;
+}
+section ul{
+    list-style: circle;
 }
 
 /* 푸터 */
@@ -88,7 +105,7 @@ footer h2{
     
     margin-left: 150px;
 }
-ul{
+footer ul{
     list-style: none;
     
 }
