마무리단계

--- a/요금제(이현학).css
+++ b/요금제(이현학).css
@@ -94,24 +94,30 @@ section h1{
 .rate{
     display: flex;
     justify-content: center;
+   
 }
 .plan1 {
     display: inline-block;
     width: 500px; 
     height: 400px;
     padding: 15px;
-    margin: 0;
+    margin: 20px;
     box-shadow: 0 0 5px gray;
+    transition: 1s;
 }
 
 .plan2 {
     width: 500px; 
     height: 400px;
     padding: 15px;
-    margin: 0;
+    margin: 20px;
     box-shadow: 0 0 5px gray;
-    position: relative;
+    transition: 1s;
 }
+.plan1:hover{
+    transform: translate(100px, 0) scale(1.2)
+}
+
 section li{
     line-height: 2;
 }
