--- a/요금제(이현학).css
+++ b/요금제(이현학).css
@@ -83,6 +83,10 @@ main button:hover{
     .rate{
         flex-direction: column;
     }
+    .plan1, .plan2{
+        pointer-events: none;
+    }
+
 }
 
 /* 요금제 섹션 */
@@ -96,26 +100,26 @@ section h1{
     justify-content: center;
    
 }
-.plan1 {
-    display: inline-block;
+.plan1, .plan2 {
+    
     width: 500px; 
     height: 400px;
     padding: 15px;
     margin: 20px;
     box-shadow: 0 0 5px gray;
-    transition: 1s;
+    transition: 0.5s;
+    background-color: white;
 }
 
-.plan2 {
-    width: 500px; 
-    height: 400px;
-    padding: 15px;
-    margin: 20px;
-    box-shadow: 0 0 5px gray;
-    transition: 1s;
-}
 .plan1:hover{
-    transform: translate(100px, 0) scale(1.2)
+    transform: translate(275px, 0) scale(1.1);
+    
+}
+.plan1:hover + .plan2{
+    opacity: 0.1; 
+}
+.plan2.active{
+    transform: translate(-275px, 0) scale(1.1)
 }
 
 section li{
@@ -144,12 +148,13 @@ section button:hover{
     visibility: hidden;
 }
 
-
 .announce{
     font-size: small;
     color: gray;
 }
-
+.announce a{
+    color: gray;
+}
 .announce a:visited{
     color: gray;
 }
@@ -194,17 +199,3 @@ footer a:visited{
 }
 
 
-/* 0131 */
-/* 할거 없으면 메인에 요금제 섹션 만들기 */
-/* 푸터에 구현하고자한 기능은 자바스크립트가 필요해서 임시로
-hover 기능을 써서 구현 */
-
-/* 0201 */
-/* 추가한것 */
-/* 요금제 섹션 추가 앵커 추가 */
-/* 추가할 사항 */
-/* 미디어 쿼리 활용해서 창이 줄어들었을때 헤더 증가 우측 div column 화*/
-/* 검색창 삭제 요금제 섹션 박스 겹치고 호버링시 위치 역전 */
-
-/* 1730분 추가
-할거 거의 다함 마지막으로 호버시 박스 위치만 역전되게 만들면 끝 이건 내일 */
